--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -1,19 +1,32 @@
 :root {
-  --primary-color: grey;
-  --secondary-color: #827c7c;
+  --primary-color: #0D9DE3	;
+  --secondary-color: #FFDD00;
+  --accent1-color: #5C6F9F;
+}
+
+.primary {
+  background-color: var(--primary-color);
+}
+
+.secondary {
+  background-color: var(--secondary-color);
+}
+
+.accent1 {
+  background-color: var(--accent1-color);
 }
 
 
 header,
 footer {
-  background-color: rgb(71, 22, 136);
+  background-color: var(--accent1-color);
   padding: 5px;
   color: white;
   text-align: center;
 }
 
 body {
-  font-family: monospace;
+  font-family:'Roboto', sans-serif;;
   font-size: 1rem;
   margin: auto;
 }
@@ -24,11 +37,6 @@ main {
   padding: 2em;
 }
 
-h1 {
-  padding-top: 20px;
-  padding-right: 35px;
-}
-
 ul {
   list-style: square;
 }
@@ -36,11 +44,10 @@ ul {
 footer a,
 footer a:visited,
 li a:visited {
-  color: lightskyblue;
+  color: var(--secondary-color); 
 }
 
 /* Hamburger button */
-
 nav {
   margin: 0 auto;
   max-width: 900px;
@@ -52,13 +59,12 @@ nav ul {
 }
 nav ul li a {
   display: block;
-  color: #fff;
+  color: var(--secondary-color);
   text-align: center;
-  padding: 0.75rem;
+  padding: 1rem;
   text-decoration: none;
-  font-size: 0.95rem;
-  background-color: #373737;
-  transition: 0.5s;
+  font-size: 1rem;
+  background-color: var(--primary-color); 
 }
 
 nav ul {
@@ -84,62 +90,22 @@ nav ul.open {
 }
 
 nav button {
-  color: #536878;
-  background-color: #f6f1ea;
-  transition: 0.5s;
+  color:var(--primary-color);
+  background-color: var(--primary-color);
   border: none;
   font-size: 2rem;
 }
 
 nav a:hover {
-  background-color: #f2f3ae;
-  color: #36454f;
+  background-color: var(--primary-color);
+  color: var(--accent1-color);
 }
 
-/* Target Audience */
-.persona_img,
-.site_logo {
-  max-width: 200px;
-  border-radius: 5%;
-  border-style: double;
-}
-
-#color_scheme {
-  max-width: 100%;
-  border-radius: 5%;
-  border-style: double;
-}
-
-.h_sample {
-  font-family: "Mukta", sans-serif;
-}
-
-.p_sample {
-  font-family: "Outfit", sans-serif;
-}
 
 /* Color Scheme */
-
-#header_example {
-  background-color: #023e8a;
-  color: white;
-  overflow: hidden;
-  font-size: 2rem;
-  line-height: 150%;
-}
-
-#background_example {
-  background-color: #caf0f8;
-  color: black;
-  overflow: hidden;
-  font-size: 2rem;
-  line-height: 150%;
-}
-
-#accent_example {
-  background-color: #00b4d8;
-  color: black;
-  overflow: hidden;
-  font-size: 2rem;
-  line-height: 150%;
+td {
+  height: 100px;
+  width: 150px;
+  text-align: center;
+  border: 1px solid;
 }
