--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -90,7 +90,7 @@ nav ul.open {
 }
 
 nav button {
-  color:var(--primary-color);
+  color:var(--accent1-color);
   background-color: var(--primary-color);
   border: none;
   font-size: 2rem;
